# edgezone

./: README.md  install.sh
.github/workflows/: cross-build.yml  ghcr.yml
master/: .env.example  Dockerfile  bun.lockb  package-lock.json  package.json
master/src/lib/components/: OsIcon.svelte
master/src/lib/server/: cache.js
master/src/lib/server/db/: schema.js
master/src/routes/: +layout.svelte  +page.server.js  +page.svelte
master/src/routes/[server]/: +page.server.js  +page.svelte
master/src/routes/[server]/projects/[project]/: +page.server.js  +page.svelte
master/src/routes/[server]/projects/[project]/deployments/[deployment]/: +server.js
master/src/routes/api/servers/[server]/: +server.js
master/src/routes/api/servers/[server]/projects/[project]/deploy/: +server.js
node/: .gitignore  Cargo.toml  Cross.toml  Dockerfile
node/src/: db.rs  endpoints.rs  error.rs  main.rs  projects.rs
node/src/endpoints/: core.rs
