[package]
name = "edgezone-node"
version = "0.3.0"
edition = "2021"
authors = ["Smartlinuxcoder <smartcoder@smartlinux.xyz>"]
description = "EdgeZone node server for distributed edge computing"
license = "GPL-3.0-or-later"
repository = "https://github.com/Smartlinuxcoder/edgezone"
keywords = ["edge-computing", "distributed", "server"]
categories = ["web-programming::http-server"]
readme = "../README.md"


[dependencies]
axum = "0.8.1"
libsql = "0.6.0"
serde = "1.0.217"
serde_derive = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
clap = { version = "4.4", features = ["derive"] }

